--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-  DOUG
+
+  
+  <h1><center>The Doug App</center></h1>
+  <h3><center>The Ultimate Dog Website For Veterans</center></h3>
+
+  
+  
   <script src="script.js"></script>
 
   <!--
